--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,27 +25,31 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # اذا كان requirements.txt في جذر المشروع
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          # اذا كان requirements.txt في مجلد myproject/
           if [ -f myproject/requirements.txt ]; then pip install -r myproject/requirements.txt; fi
 
-      # 4️⃣ Run Django Tests using settings_test.py
+      # 4️⃣ Run migrations for test database
+      - name: Run migrations
+        run: |
+          python myproject/manage.py makemigrations --settings=myproject.settings_test
+          python myproject/manage.py migrate --settings=myproject.settings_test
+
+      # 5️⃣ Run Django Tests
       - name: Run Django Tests
         run: |
-          python  myproject/manage.py test --settings=myproject.settings_test
+          python myproject/manage.py test --settings=myproject.settings_test --verbosity=2
 
-      # 5️⃣ Set up Docker Buildx
+      # 6️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 6️⃣ Build Docker Image
+      # 7️⃣ Build Docker Image
       - name: Build Docker Image
         run: docker build -t django-app .
 
-      # 7️⃣ Run Docker Container (optional local test)
+      # 8️⃣ Run Docker Container (optional local test)
       - name: Run Docker Container
         run: |
-          docker run -d -p 8000:8000 --name app django-app
+          docker run -d -p 8000:8000 --name django-app-test django-app
           sleep 10
           docker ps -a
