--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Django CI/CD
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Python 3.12
+      # 2️⃣ Setup Python
       - name: Set up Python 3.12
         uses: actions/setup-python@v4
         with:
@@ -25,21 +25,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # إذا كان requirements.txt في جذر المشروع
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          # إذا كان requirements.txt في مجلد myproject/
-          if [ -f myproject/requirements.txt ]; then pip install -r myproject/requirements.txt; fi
+          pip install -r requirements.txt
 
-      # 4️⃣ Run migrations for test database
+      # 4️⃣ Run migrations (test DB)
       - name: Run migrations
         run: |
-          python myproject/manage.py makemigrations --settings=myproject.settings_test
-          python myproject/manage.py migrate --settings=myproject.settings_test
+          python manage.py migrate --noinput
 
       # 5️⃣ Run Django Tests
       - name: Run Django Tests
         run: |
-          python myproject/manage.py test cours --settings=myproject.settings_test --verbosity=2
+          python manage.py test --verbosity=2
 
       # 6️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
@@ -48,14 +44,16 @@ jobs:
       # 7️⃣ Build Docker Image
       - name: Build Docker Image
         run: |
-          # إذا كان Dockerfile في جذر المشروع
-          if [ -f Dockerfile ]; then docker build -t django-app .; fi
-          # إذا كان Dockerfile داخل myproject/
-          if [ -f myproject/Dockerfile ]; then docker build -f myproject/Dockerfile -t django-app .; fi
+          docker build -t django-app .
 
-      # 8️⃣ Run Docker Container (اختياري لمراجعة)
-      - name: Run Docker Container
+  deploy:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Trigger Render Deploy
         run: |
-          docker run -d -p 8000:8000 --name django-app-test django-app
-          sleep 10
-          docker ps -a
+          curl -X POST "$RENDER_DEPLOY_HOOK"
+
+        env:
+          RENDER_DEPLOY_HOOK: ${{ secrets.RENDER_DEPLOY_HOOK }}
