--- a/myproject/Dockerfile
+++ b/myproject/Dockerfile
@@ -1,21 +1,30 @@
+
+# Use official Python image
 FROM python:3.12-slim
 
-WORKDIR /app
+# Prevent Python from writing .pyc files
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
 
-# تثبيت المكتبات الأساسية
+# Install dependencies needed for psycopg
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# نسخ ملف المتطلبات
-COPY myproject/requirements.txt /app/
+# Create project directory
+WORKDIR /app
 
-# تثبيت dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Install Python dependencies
+COPY requirements.txt /app/
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 
-# نسخ المشروع كله
-COPY myproject/ /app/
+# Copy project files
+COPY . /app/
 
-# تشغيل الخادم (مثال)
+# Expose port
+EXPOSE 8000
+
+# Run server
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
